# horfimbor-template

./: .env.dist  .env.docker  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  justfile
.github/workflows/: rust.yml
client/: CHANGELOG.md  Cargo.toml  index.html
client/src/: input.rs  lib.rs  state.rs  template.rs
consumer/: CHANGELOG.md  Cargo.toml
consumer/src/: delay.rs  dto.rs  main.rs  state.rs
server/: CHANGELOG.md  Cargo.toml  build.rs
server/src/: controller.rs  main.rs
server/src/consumer/: delay.rs  dto.rs  state.rs
server/src/web/: api.rs  mod.rs
server/templates/: index.html.tera  template_render.tera  update-template.html.tera
shared/: CHANGELOG.md  Cargo.toml
shared/src/: command.rs  dto.rs  error.rs  event.rs  lib.rs
state/: CHANGELOG.md  Cargo.toml
state/src/: lib.rs
state/tests/: template-state-test.rs
state/tests/book/: add.feature  reset.feature
