[workspace]
resolver = "2"
members = [
    "client",
    "server",
    "shared",
    "state"
]

[workspace.dependencies]
gyg-eventsource = {git= "https://github.com/galakhygame/gyg-eventsource", branch = "handling-callback"}
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
eventstore = "2.2"
uuid = { version = "1.1", features = ["v4", "serde"] }

