[workspace]
resolver = "2"
members = [
    "client",
    "consumer",
    "server",
    "shared",
    "state"
]

[workspace.dependencies]
#horfimbor-eventsource = {path = "../horfimbor-engine/horfimbor-eventsource"}
horfimbor-eventsource = "0.1"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
redis= { version = "0.24", features = ["tokio-rustls-comp"] }
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
eventstore = "3.0.0"
uuid = { version = "1.1", features = ["v4", "serde"] }


[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "warn"