[package]
name = "template-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
bounce = "0.9"
yew = { version= "0.21", features=["csr"] }
custom-elements = "0.2"
template-shared = { path = "../shared" }
console_error_panic_hook = "0.1"
console_log = "1.0"
gloo-net = "0.6"
log = "0.4"
reqwasm = "0.5"
weblog = "0.3"
wasm-bindgen = "0.2"
serde.workspace = true
serde_json.workspace = true
futures = "0.3.28"

[dependencies.web-sys]
features = ["HtmlInputElement", "InputEvent"]
version = "0.3"


[lints]
workspace = true
