[package]
name = "template-client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
horfimbor-client-derive = "0.1"
horfimbor-client = "0.1"
#horfimbor-client-derive = { path = "../../horfimbor-engine/horfimbor-client-derive" }
#horfimbor-client = { path = "../../horfimbor-engine/horfimbor-client" }

yew = { version= "0.23", features=["csr"] }
custom-elements = "0.2"
template-shared = { path = "../shared" }
gloo-net = "0.7"
reqwasm = "0.5"
weblog = "0.3"
wasm-bindgen = "0.2"
serde.workspace = true
serde_json.workspace = true
futures = "0.3.28"

[dependencies.web-sys]
features = ["HtmlInputElement", "InputEvent"]
version = "0.3"

[lints]
workspace = true
