[package]
name = "template-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gyg-eventsource = { workspace = true }
serde = { workspace = true }
eventstore = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
template-shared = { path = "../shared", features = ["server"] }
template-state = { path = "../state" }
rocket = { workspace=true, features = ["json"] }
rocket_cors = "0.6.0-alpha2"
serde_json = "1"
anyhow = "1.0"