[package]
name = "template-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gyg-eventsource = { workspace = true }
serde = { workspace = true }
eventstore = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
template-shared = { path = "../shared", features = ["server"] }
template-state = { path = "../state" }
redis= { version = "0.23", features = ["tokio-native-tls-comp"] }
rocket = { workspace=true, features = ["json"] }
rocket_cors = "0.6.0-alpha2"
serde_json = { workspace = true }
anyhow = "1.0"
chrono = "0.4"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.3"
features = ["tera"]