[package]
name = "template-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gyg-eventsource = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
rocket = { workspace=true }